--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <script>
 // Function to handle button click
 function handleClick() {
+	console.log('XXXXXXXXXX button clickced');
     try {
 		parent.postMessage('RequestSubmitted');
 	} catch (e) {
