--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
 // Function to handle button click
 function handleClick() {
 	console.log('XXXXXXXXXX button clickced', parent);
-	parent.postMessage('RequestSubmitted', 'What\'s this');
-    try {
-		parent.postMessage('RequestSubmitted');
-	} catch (e) {
-		//Log Error
-		window.console && window.console.log(e);
-	}
+	parent.postMessage('RequestSubmitted', '*');
 }
 
 // Add event listener to the button
